--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,20 +48,20 @@
     --primary: 221.13 89.83 65.29;
     --primary-foreground: 0 0 95%;
 
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 134.2, 100%, 23.1%;
     --secondary-foreground: 210 40% 98%;
 
-    --muted: 217.2 32.6% 17.5%;
+    --muted: 134.2, 100%, 23.1%;
     --muted-foreground: 215 20.2% 65.1%;
 
-    --accent: 217.2 32.6% 17.5%;
+    --accent: 134.2, 100%, 23.1%;
     --accent-foreground: 210 40% 98%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
+    --border: 134.2, 100%, 23.1%;
+    --input: 134.2, 100%, 23.1%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
