--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,17 +13,17 @@
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 0%;
 
-    --primary: 134.2, 100%, 23.1%;
+    --primary: 134.2 100% 23.1%;
     --primary-foreground: 210 40% 98%;
 
     --secondary: 210 40% 96.1%;
-    --secondary-foreground: 134.2, 100%, 23.1%;
+    --secondary-foreground: 134.2 100% 23.1%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
     --accent: 210 40% 96.1%;
-    --accent-foreground: 134.2, 100%, 23.1%;
+    --accent-foreground: 134.2 100% 23.1%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
@@ -45,23 +45,23 @@
     --popover: 0 0% 0%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 221.13 89.83 65.29;
+    --primary: 121.7 100% 79.6%;
     --primary-foreground: 0 0 95%;
 
-    --secondary: 134.2, 100%, 23.1%;
+    --secondary: 134.2 100% 23.1%;
     --secondary-foreground: 210 40% 98%;
 
-    --muted: 134.2, 100%, 23.1%;
+    --muted: 134.2 100% 23.1%;
     --muted-foreground: 215 20.2% 65.1%;
 
-    --accent: 134.2, 100%, 23.1%;
+    --accent: 134.2 100% 23.1%;
     --accent-foreground: 210 40% 98%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 134.2, 100%, 23.1%;
-    --input: 134.2, 100%, 23.1%;
+    --border: 134.2 100% 23.1%;
+    --input: 134.2 100% 23.1%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
